--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -8,8 +8,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".RecordFieldActivity">
+        android:theme="@android:style/Theme.NoTitleBar">
+        <activity android:name=".GameSummaryActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
