Implemented a title bar on recording page with game information display and controls(switch between first and second half; end recording); Fixed the way of capturing bitmap from current view; Instead of passing big stuff via intent, save/retrieve them to/from internal storage; Got rid of thumbnails; Fixed some bugs with data structures.

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@android:style/Theme.NoTitleBar">
-        <activity android:name=".GameSummaryActivity">
+        <activity android:name=".RecordFieldActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,6 +20,9 @@
         <activity
             android:name=".FieldSummaryActivity"
             android:screenOrientation="landscape" />
+        <activity
+            android:name=".GameSummaryActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
