--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="edu.illinois.cs498.draganddroppractice">
+    package="edu.illinois.cs498.soccershotrecorder">
 
     <application
         android:allowBackup="true"
         android:installLocation="preferExternal"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/app_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@android:style/Theme.NoTitleBar">
-        <activity android:name=".RecordFieldActivity">
+        android:theme="@style/AppTheme">
+        <activity android:name="edu.illinois.cs498.soccershotrecorder.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,10 +18,19 @@
         </activity>
 
         <activity
-            android:name=".FieldSummaryActivity"
+            android:name=".FirstTimeDialogActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".PlayerListActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name="edu.illinois.cs498.soccershotrecorder.RecordFieldActivity"
             android:screenOrientation="landscape" />
         <activity
-            android:name=".GameSummaryActivity"
+            android:name="edu.illinois.cs498.soccershotrecorder.FieldSummaryActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name="edu.illinois.cs498.soccershotrecorder.GameSummaryActivity"
             android:screenOrientation="portrait" />
     </application>
 
